--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,10 @@
 {
+  "buildCommand": "",
+  "installCommand": "",
+  "outputDirectory": ".",
   "functions": {
     "api/**/*.{ts,js}": {
-      "runtime": "nodejs22.x",
+      "runtime": "@vercel/node@5.5.0",
       "memory": 256,
       "maxDuration": 10
     }
