--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,18 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+
+  "engines": {
+    "node": "22.x"
+  },
+
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "echo \"(opcional) añade eslint/prettier más adelante\""
   },
+
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
     "react": "^19.2.0",
@@ -16,6 +22,7 @@
     "react-router-dom": "^7.9.4",
     "zustand": "^5.0.8"
   },
+
   "devDependencies": {
     "@types/node": "^24.8.1",
     "@types/react": "^19.2.2",
